2003-02-02  Dani Carbonell  <bocata@panete.net>

	* Makefile.am: added -DGTK_DISABLE_DEPRECATED to the compilation
	options.
	
	* TODO: updated (we shouldn't be using this)
	
	* dialogs.c: removed obsolete functions, minor bugfixes.
	(connectdialog_new): made unresizable.
	(keydialog_new): fixed a bug when hitting the Cancel button.
	(prefdialog_new): added scrollbars for the theme list and the keys
	list.
	
	* fields.c: removed obsolete functions, minor bugfixes.
	(fields_page_contents): first approach to allow fields resizing.
	Nothing yet. Cleaned up a bit.
	
	* gtetrinet.c: removed obsolete functions, minor bugfixes.
	
	* partyline.c: likewise.
	
	* winlist.c: likewise.
	
	* misc.c (pixmap_label): nuked, no longer needed.

2003-02-02  Jordi Mallach  <jordi@sindominio.net>

	* src/winlist.c: add a requested translation tip.

2003-02-01  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: check for and export GCONFTOOL.
	Require intltool 0.25.

2003-02-01  Dani Carbonell  <bocata@panete.net>

	* gtetrinet.schemas.in: changed the type of the keys values to
	String, they are now human readable.
	
	* src/Makefile.am: keys.c, keys.h and keytable.h no longer needed,
	nuked.
	
	* src/config.c: updated so now it stores the keys in GConf as
	strings.
	(config_loadconfig): now it loads the keys as strings, instead of
	integers.
	(keys_down_changed): new function, it's a GConf notification handler
	(keys_right_changed): likewise.
	(keys_left_changed): likewise.
	(keys_rotate_right_changed): likewise.
	(keys_rotate_left_changed): likewise.
	(keys_drop_changed): likewise.
	(keys_message_changed): likewise.
	
	* src/config.h: added new function prototypes.
	
	* src/dialogs.c: fixed the gtk_progress_bar, changed it to read
	strings instead of integers from GConf.
	(connectingdialog_timeout): changed to work with gtk_progress_bar.
	(connectdialog_new): changed parent, so the connecting window shows.
	(prefdialog_drawkeys): changed to read strings instead of integers.